Introduction of the tests, fix of minor issues and introduction of a new package structure

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
-recursive-include ultimate_hosts_blacklist_the_whitelist *.py
+recursive-include ultimate_hosts_blacklist/whitelist *.py
 include LICENSE
 include requirements.txt
+include README.rst
+include .coveragerc
