--- a/.coveragerc
+++ b/.coveragerc
@@ -23,7 +23,7 @@ exclude_lines =
 
     # Don't complain about missing debug-only code:
     def __repr__
-    if self\.debug
+    def __del__
 
     # Don't complain if tests don't hit defensive assertion code:
     raise AssertionError
