--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
-recursive-include ultimate_hosts_blacklist/whitelist *.py
+graft ultimate_hosts_blacklist
+global-exclude __pycache__
+global-exclude *.py[co]
 include LICENSE
 include requirements.txt
 include README.rst
-include .coveragerc
