--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,16 @@
 [tox]
-envlist = py36,py37,py38
 recreate = True
 
 [testenv]
 
 deps=
     coverage
-    pylint
-    unittest2
 conda_deps=
     coverage
-    pylint
-    unittest2
 conda_channels=
     conda-forge
     default
 commands =
-    coverage run -m unittest2 discover -s ultimate_hosts_blacklist/whitelist/tests/
+    coverage run -m unittest discover -s ultimate_hosts_blacklist/whitelist/tests/
     coverage xml
     coverage report -m
-    pylint ultimate_hosts_blacklist/whitelist
